<?xml version="1.0"?>
<package format="3">
  <name>rear_wheel_center_broadcaster</name>
  <version>0.1.0</version>
  <description>The rear_wheel_center_broadcaster</description>
  <maintainer email="takeshi.miura@tier4.jp">Takeshi Miura</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <exec_depend>global_parameter_loader</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
